Cleanup warnings. Add Eclipse support. 	modified:   .classpath 	modified:   .settings/org.eclipse.jdt.core.prefs 	modified:   src/main/java/junit/extensions/TestDecorator.java 	modified:   src/main/java/junit/extensions/TestSetup.java 	modified:   src/main/java/junit/framework/JUnit4TestAdapter.java 	modified:   src/main/java/junit/framework/JUnit4TestCaseFacade.java 	modified:   src/main/java/junit/framework/TestCase.java 	modified:   src/main/java/junit/framework/TestResult.java 	modified:   src/main/java/junit/framework/TestSuite.java 	modified:   src/main/java/junit/runner/BaseTestRunner.java 	modified:   src/main/java/junit/textui/ResultPrinter.java 	new file:   src/main/java/module-info.java 	modified:   src/main/java/org/junit/experimental/ParallelComputer.java 	modified:   src/main/java/org/junit/experimental/categories/CategoryFilterFactory.java 	modified:   src/main/java/org/junit/experimental/categories/CategoryValidator.java 	modified:   src/main/java/org/junit/experimental/max/MaxHistory.java 	modified:   src/main/java/org/junit/experimental/results/ResultMatchers.java 	modified:   src/main/java/org/junit/experimental/theories/internal/Assignments.java 	modified:   src/main/java/org/junit/internal/AssumptionViolatedException.java 	modified:   src/main/java/org/junit/internal/MethodSorter.java 	modified:   src/main/java/org/junit/internal/RealSystem.java 	modified:   src/main/java/org/junit/internal/management/FakeRuntimeMXBean.java 	modified:   src/main/java/org/junit/internal/management/FakeThreadMXBean.java 	modified:   src/main/java/org/junit/internal/management/ReflectiveRuntimeMXBean.java 	modified:   src/main/java/org/junit/internal/management/ReflectiveThreadMXBean.java 	modified:   src/main/java/org/junit/internal/matchers/StacktracePrintingMatcher.java 	modified:   src/main/java/org/junit/internal/matchers/ThrowableCauseMatcher.java 	modified:   src/main/java/org/junit/internal/matchers/ThrowableMessageMatcher.java 	modified:   src/main/java/or